# harness

./: .coverage  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  SOUL.md.example  comparacao-hermes.html  demo.py  docker-compose.yml  guia-harness.html  mkdocs.yml  plan.md  plano-implementacao.html  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: publish.yml
docs/: calltool-bridge.md  configuration.md  index.md  quickstart.md  skills-keyword-search.md  testing.md
docs/adr/: 0001-mcp-exposure-and-runtime-lifecycle.md  0002-decorator-extension-api.md  index.md
docs/concepts/: llm-providers.md  loop-and-memory.md  mcp.md  observability.md  persona.md  sandbox.md  skills.md  tools-and-providers.md
docs/deployment/: cli.md  http-server.md  stateless.md
docs/reference/: core.md  llm.md  mcp.md  memory.md  observability.md  persistence.md  settings.md  tools.md
examples/: add_fellow_mcp.py  custom_tools_and_hooks.py
harness/: __init__.py  app.py  cli.py  config.py  embeddings.py  loop.py  mcp_client.py  memory.py  models.py  oauth.py  observer.py  prompt.py  provider.py  repository.py  sandbox.py  server.py  settings.py  skills.py  testing.py  tokenizer.py  tools.py
harness/core/: __init__.py  app.py  hooks.py  loop.py  permissions.py
harness/interfaces/: __init__.py  cli.py  inputbox.py  mcpstore.py  prefs.py  server.py  tui.py  ui.py
harness/interfaces/assets/: _logo_art.txt
harness/llm/: __init__.py  provider.py  registry.py  tokenizer.py
harness/mcp/: __init__.py  client.py  oauth.py
harness/memory/: __init__.py  persona.py  skills.py  window.py
harness/observability/: __init__.py  observer.py
harness/persistence/: __init__.py  repository.py
harness/tools/: __init__.py  builtin.py  capabilities.py  decorator.py  sandbox.py
tests/: conftest.py  helpers.py  test_cli_ui.py  test_core.py  test_hook_decorator.py  test_loop_and_memory_edges.py  test_permissions.py  test_plan_mode.py  test_prefs_and_runtime_controls.py  test_providers.py  test_redesign.py  test_repository_contract.py  test_resume.py  test_skills_and_tracer.py  test_tool_decorator.py
