[project]
name = "harness"
version = "2.1.0"
description = "Pluggable, multi-tenant LLM agent harness (Memory, Skills, MCP, Tools, Loop) over OpenRouter + Postgres."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",          # OpenRouter HTTP client
    "psycopg[binary]>=3.1", # Postgres driver (real repository)
    "tiktoken>=0.7",        # accurate token counting (heuristic fallback exists)
    "rich>=13.7",           # CLI rendering (harness.interfaces.cli / ui)
    "textual>=0.79",        # full-screen chat TUI (harness.interfaces.tui)
    "pillow>=10.4",         # welcome-box logo as half-block art (harness.interfaces.ui)
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.14", "mypy>=1.19"]
# Managed-identity (Entra ID) auth for the Azure AI Foundry provider.
# Not needed when using AZURE_AI_API_KEY.
azure = ["azure-identity>=1.19"]
# Google Vertex AI provider (Application Default Credentials).
vertex = ["google-auth>=2.0"]
# AWS Bedrock provider (Converse API).
bedrock = ["boto3>=1.34"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.26"]

[project.scripts]
harness = "harness.interfaces.cli:entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pycodestyle (E/W), pyflakes (F), isort (I), pyupgrade (UP), flake8-bugbear (B),
# flake8-comprehensions (C4), flake8-simplify (SIM).
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line length is handled by the formatter
    "B008",   # allow function calls in dataclass field defaults (Config uses them)
    "SIM117", # nested `with` in the SSE stream loop reads clearer than a merged one
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: exercises a real external service (Postgres via TEST_DATABASE_URL); skips itself when the service is not configured",
]

[tool.coverage.run]
source = ["harness"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true   # httpx, psycopg, tiktoken, azure are optional/lazy
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
files = ["harness"]
